--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -133,3 +133,13 @@ test:
         read:
           mode: primary
         max_pool_size: 1
+production:
+  clients:
+    default:
+      database: hipflat
+      hosts:
+        - localhost:27017
+      options:
+        read:
+          mode: primary
+        max_pool_size: 1
